objects/Call_Grading_Form_2_0__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Call Grading Form 2.0</relationshipLabel>
        <relationshipName>Call_Grading_Form_2_0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Changes_Completed_Correctly__c</fullName>
        <label>Changes Completed Correctly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat_Control__c</fullName>
        <label>Chat Control</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Case_and_Response_Attached_Correct__c</fullName>
        <label>Child Case and Response Attached Correct</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Cases_Chat_Transcript_Attached__c</fullName>
        <label>Child Cases &amp; Chat Transcript Attached</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_s_Issues_Questions_Restated__c</fullName>
        <label>Client's Issues/Questions Restated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Management_Access__c</fullName>
        <description>Maps Owner Verified</description>
        <label>Co-Management Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Management_Walkthrough__c</fullName>
        <description>Maps Owner Verified</description>
        <label>Co-Management Walkthrough</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Mange_Email_Check_and_Accepted__c</fullName>
        <label>Co-Mange Email Check and Accepted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete_notes__c</fullName>
        <label>Complete notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concerns__c</fullName>
        <label>Acknowledge Concerns</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirm_Ability_to_Help__c</fullName>
        <label>Confirm Ability to Help</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirm_Segment_Services__c</fullName>
        <label>Confirm Segment &amp; Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirms_Main_Issue_Addressed__c</fullName>
        <label>Confirms Main Issue Addressed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirms_No_Outstanding_Questions__c</fullName>
        <label>Confirms No Outstanding Questions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Date__c</fullName>
        <label>Contact Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <label>Contacts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversational_Ability__c</fullName>
        <description>.</description>
        <label>Conversational Ability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Grammar_Spelling__c</fullName>
        <label>Correct Grammar &amp; Spelling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Status__c</fullName>
        <label>Correct Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Listing_Content__c</fullName>
        <label>Custom Listing Content</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Messages__c</fullName>
        <label>Custom Messages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Login_Overview__c</fullName>
        <label>DB Login &amp; Overview</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Wrap_Up__c</fullName>
        <label>DB Wrap Up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dashboard_Walkthrough__c</fullName>
        <label>Dashboard Walkthrough</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detailed_Notes__c</fullName>
        <label>Detailed Notes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drip_Campaigns__c</fullName>
        <label>Drip Campaigns</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Integration__c</fullName>
        <label>Email Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Marketing__c</fullName>
        <label>Email Marketing/Automated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Settings__c</fullName>
        <label>Email Settings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Templates__c</fullName>
        <label>Email Templates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Tracking__c</fullName>
        <label>Email Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Essentials_Feature_Transition__c</fullName>
        <description>.</description>
        <label>Essentials Feature Transition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Essentials_Value_Props__c</fullName>
        <label>Essentials Value Props</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Listing_Information__c</fullName>
        <label>Existing Listing Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Listings_in_Pan_Notated__c</fullName>
        <label>Existing Listings in Pan Notated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explain_Co_Management__c</fullName>
        <inlineHelpText>Rep explains that we need to walk client through process of adding us as a manager to the Google listing, giving us the ability to update it for optimization purposes.</inlineHelpText>
        <label>Explain Co-Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAIR_Communication__c</fullName>
        <inlineHelpText>CONSIDERATIONS: acknowledging statements (more than "yes, uh huh", focused and responding appropriately to statements, probing questions, investigates to get client talking, provides resolution &amp; actionables to questions, schedules follow ups</inlineHelpText>
        <label>FAIR Communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feature_Wrap_Up__c</fullName>
        <label>Feature Wrap Up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Review_Solicitation__c</fullName>
        <label>Feedback/Review Solicitation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fill_in_Feature__c</fullName>
        <label>Fill-in Feature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Score__c</fullName>
        <label>Final Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Formula_2_Text__c</fullName>
        <label>Formula 2 Text</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_2__c</fullName>
        <formula>IF(ISPICKVAL( Opening__c ,"0"),100,0)+
IF(ISPICKVAL( Opening__c ,"1"),100,0)+ 
IF(ISPICKVAL( Opening__c ,"2"),100,0)+ 
IF(ISPICKVAL( Uncover_the_Issue__c ,"0"),100,0)+
IF(ISPICKVAL( Uncover_the_Issue__c ,"1"),100,0)+ 
IF(ISPICKVAL( Uncover_the_Issue__c ,"2"),100,0)+ 
IF(ISPICKVAL( Concerns__c ,"0"),100,0)+ 
IF(ISPICKVAL( Concerns__c ,"1"),100,0)+ 
IF(ISPICKVAL( Concerns__c ,"2"),100,0)+ 
IF(ISPICKVAL( Ownership__c ,"0"),100,0)+ 
IF(ISPICKVAL( Ownership__c ,"1"),100,0)+ 
IF(ISPICKVAL( Ownership__c ,"2"),100,0)+ 
IF(ISPICKVAL( Issues_Resolved__c ,"0"),100,0)+ 
IF(ISPICKVAL( Issues_Resolved__c ,"1"),100,0)+ 
IF(ISPICKVAL( Issues_Resolved__c ,"2"),100,0)+ 
IF(ISPICKVAL( Agreement_Details__c ,"0"),100,0)+
IF(ISPICKVAL( Agreement_Details__c ,"1"),100,0)+ 
IF(ISPICKVAL( Agreement_Details__c ,"2"),100,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"1"),0,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"1"),100,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"2"),100,0)+ 
IF(ISPICKVAL( Outstanding_questions__c ,"0"),100,0)+ 
IF(ISPICKVAL( Outstanding_questions__c ,"1"),100,0)+ 
IF(ISPICKVAL( Outstanding_questions__c ,"2"),100,0)+ 
IF(ISPICKVAL( closing__c ,"0"),100,0)+ 
IF(ISPICKVAL( closing__c ,"1"),100,0)+ 
IF(ISPICKVAL( closing__c ,"2"),100,0)+ 
IF(ISPICKVAL( Appropriate_downsell__c ,"0"),100,0)+
IF(ISPICKVAL( Appropriate_downsell__c ,"1"),100,0)+ 
IF(ISPICKVAL( Appropriate_downsell__c ,"2"),100,0)+ 
IF(ISPICKVAL( No_concession__c ,"0"),100,0)+
IF(ISPICKVAL( No_concession__c ,"1"),100,0)+ 
IF(ISPICKVAL( No_concession__c ,"2"),100,0)+ 
IF(ISPICKVAL( Attempt_Log_in__c ,"0"),100,0)+ 
IF(ISPICKVAL( Attempt_Log_in__c ,"1"),100,0)+ 
IF(ISPICKVAL( Attempt_Log_in__c ,"2"),100,0)+ 
IF(ISPICKVAL( Attitude_Tone_Empathy__c ,"0"),100,0)+
IF(ISPICKVAL( Attitude_Tone_Empathy__c ,"2"),100,0)+ 
IF(ISPICKVAL( Attitude_Tone_Empathy__c ,"4"),100,0)+ 
IF(ISPICKVAL( Resolution_Skills__c ,"0"),100,0)+
IF(ISPICKVAL( Resolution_Skills__c ,"2"),100,0)+ 
IF(ISPICKVAL( Resolution_Skills__c,"4"),100,0)+ 
IF(ISPICKVAL( Conversational_Ability__c ,"0"),100,0)+ 
IF(ISPICKVAL( Conversational_Ability__c ,"2"),100,0)+ 
IF(ISPICKVAL( Conversational_Ability__c ,"4"),100,0)+ 
IF(ISPICKVAL( Information_Accuracy__c ,"0"),100,0)+ 
IF(ISPICKVAL( Information_Accuracy__c ,"2"),100,0)+ 
IF(ISPICKVAL( Information_Accuracy__c,"4"),100,0)+ 
IF(ISPICKVAL( Pace__c ,"0"),100,0)+ 
IF(ISPICKVAL( Pace__c ,"2"),100,0)+ 
IF(ISPICKVAL( Pace__c,"4"),100,0)+ 
IF(ISPICKVAL( Call_control__c ,"0"),100,0)+
IF(ISPICKVAL( Call_control__c ,"2"),100,0)+ 
IF(ISPICKVAL( Call_control__c,"4"),100,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_Text__c</fullName>
        <label>Formula Text</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <formula>IF(ISPICKVAL( Opening__c ,"1"),50,0)+
IF(ISPICKVAL( Opening__c ,"2"),100,0)+
IF(ISPICKVAL(  Uncover_the_Issue__c  ,"1"),50,0)+
IF(ISPICKVAL( Uncover_the_Issue__c ,"2"),100,0)+
IF(ISPICKVAL(  Concerns__c  ,"1"),50,0)+
IF(ISPICKVAL( Concerns__c ,"2"),100,0)+
IF(ISPICKVAL(  Ownership__c  ,"1"),50,0)+
IF(ISPICKVAL( Ownership__c ,"2"),100,0)+
IF(ISPICKVAL(  Issues_Resolved__c  ,"1"),50,0)+
IF(ISPICKVAL( Issues_Resolved__c ,"2"),100,0)+
IF(ISPICKVAL( Agreement_Details__c ,"1"),50,0)+
IF(ISPICKVAL( Agreement_Details__c ,"2"),100,0)+
IF(ISPICKVAL(  Complete_notes__c  ,"1"),50,0)+
IF(ISPICKVAL( Complete_notes__c ,"2"),100,0)+
IF(ISPICKVAL( Outstanding_questions__c ,"1"),50,0)+
IF(ISPICKVAL( Outstanding_questions__c ,"2"),100,0)+
IF(ISPICKVAL(  closing__c  ,"1"),50,0)+
IF(ISPICKVAL( closing__c ,"2"),100,0)+
IF(ISPICKVAL(  Appropriate_downsell__c  ,"1"),50,0)+
IF(ISPICKVAL( Appropriate_downsell__c ,"2"),100,0)+
IF(ISPICKVAL(  No_concession__c ,"1"),50,0)+
IF(ISPICKVAL( No_concession__c ,"2"),100,0)+
IF(ISPICKVAL(   Attempt_Log_in__c  ,"1"),50,0)+
IF(ISPICKVAL(  Attempt_Log_in__c ,"2"),100,0)+
IF(ISPICKVAL( Attitude_Tone_Empathy__c ,"2"),100,0)+ 
IF(ISPICKVAL( Attitude_Tone_Empathy__c ,"4"),100,0)+ 
IF(ISPICKVAL( Resolution_Skills__c ,"2"),50,0)+ 
IF(ISPICKVAL( Resolution_Skills__c,"4"),100,0)+ 
IF(ISPICKVAL( Conversational_Ability__c ,"2"),50,0)+ 
IF(ISPICKVAL( Conversational_Ability__c ,"4"),100,0)+ 
IF(ISPICKVAL( Information_Accuracy__c ,"2"),50,0)+ 
IF(ISPICKVAL( Information_Accuracy__c,"4"),100,0)+ 
IF(ISPICKVAL( Pace__c ,"2"),50,0)+ 
IF(ISPICKVAL( Pace__c,"4"),100,0)+ 
IF(ISPICKVAL( Call_control__c ,"2"),50,0)+ 
IF(ISPICKVAL( Call_control__c,"4"),100,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMBL_Account_Status__c</fullName>
        <label>GMBL Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GMBL_Business_Type__c</fullName>
        <label>GMBL Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GMBL_Listing_Data__c</fullName>
        <label>GMBL Listing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>